--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="STYLE/STYLELOGIN.CSS">
-    
+    <link rel="icon" href="img/logo pagina.png">
 </head>
 <body>
 
