--- a/recuperar contraseña.html
+++ b/recuperar contraseña.html
@@ -6,6 +6,7 @@
     <title>Recuperar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="STYLE/STYLERECU.css">
+    <link rel="icon" href="img/logo pagina.png">
 </head>
 <body>
     
