--- a/registrarse.html
+++ b/registrarse.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="STYLE/STYLESregi.css" />
+    <link rel="icon" href="img/logo pagina.png">
 </head>
 
 <body>
